# Algorithms_in_cpp

./: CMakeLists.txt  README.md  main.cpp  my_vector.cpp  my_vector.h
Design Patterns/Singleton/: singleton.cpp  singleton.h
self_implentations/matrix/: main.h  matrix.cpp  matrix.h
self_implentations/threadding_sync/: cv_practice.cpp  cv_practice.h
self_implentations/vector/: my_vector.cpp  my_vector.h
